# E-Gonz

./: .gitignore  2330PM.htm  781281240561.csv  781281240561.sh  90247_### 🔬 Comprehensive Timeline & Pos.txt  90247_SECURITY.md  90247_THE_END.txt  90247_Vercel_NextJS_Instances_Ledger.csv  90247_flay1.txt  90247_seed.txt  C__olvi_OMNIBUS_NECROMANCER_SETUP_20260614_140916.ps1  README.md  RECEIPT_TRANSMISSION_LOG.md  Trace-Load-Error-20260616T222827.json  VM131.devtools  VM137.devtools  VM140.devtools  VM146.devtools  VM26.devtools  VM4867.devtools  VM4913.devtools  VM494.devtools  VM887.devtools  VM892.devtools  XytT4kFAhW4.json  acatl_notice_manifest.txt  checksums.txt  encrypt.0.sh  eulers -1.sh  file_digest_20260612_113256.txt  file_digest_20260612_113909.txt  file_digest_20260612_114443.txt  fulld.sh  function_app.py  generate_layout.py  marrow_debt_ledger.csv  mountdeez.sh  mw1.js  mw2.js  pyproject.toml  (+7 more)
.github/workflows/: python-app.yml
Forensic_Logs/: OMNIBUS_DEEP_SWEEP_MANIFEST.txt  hardware_binary_summary.csv  merged_evidence.txt
OMNIBUS_AUTH_AUDIT/auth_modules/: MsalUnifiedBrowserOps.ts  MsalUnifiedCrypto.ts  msal_browser_core.js  msal_common_core.js  msal_unified_all.js  (+1 more)
OMNIBUS_WORKSPACE_MANIFESTS/: triage_manifest.json
entities/: Fiend.ps1  Ghoul.ps1  Goblin.ps1  Witch.ps1  Wizard.ps1  Zombie.ps1
metadata/: researcher.txt
src/: __init__.py  core.py  index.js  omnibus_reflection_anchor.cpp  utils.py
tests/: __init__.py  test_core.py  test_utils.py
tools/: Check-LegacyMICTL.ps1  Scan-QueryPayloads.ps1
v190_substrate/: v190_architecture_map.md
(+40 files in other folders)
